crates/rx/tests/ui/macro_unsupported_construct.rs
fn main() {
    let _ = rx::pattern! {
        boundary_word
    };
}
